order-app/main/default/objects/InvoiceCreated__e/InvoiceCreated__e.object-meta.xml
<CustomObject>
    <label>Invoice Created</label>
    <pluralLabel>Invoices Created</pluralLabel>
</CustomObject>