order-app/main/default/objects/InvoiceCreated__e/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Invoice Code</description>
    <label>Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>