order-app/main/default/objects/InvoiceCreated__e/fields/OpportunityCode__c.field-meta.xml
<CustomField>
    <fullName>OpportunityCode__c</fullName>
    <label>Opportunity Code</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>